gobmkida/c3/owl_does_defend
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_does_defend/src/engine/owl.c:4277:12: error: expected expression
*( _OWORD *)( v12 + 12003980) = *( _OWORD *)&owl_goal_worm[11]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_does_defend/src/engine/owl.c:4277:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v12 + 12003980) = *( _OWORD *)&owl_goal_worm[11]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_does_defend/src/engine/owl.c:4277:44: error: expected expression
*( _OWORD *)( v12 + 12003980) = *( _OWORD *)&owl_goal_worm[11]; 
                                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_does_defend/src/engine/owl.c:4277:36: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v12 + 12003980) = *( _OWORD *)&owl_goal_worm[11]; 
                                   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_does_defend/src/engine/owl.c:4278:12: error: expected expression
*( _OWORD *)( v12 + 12003968) = *( _OWORD *)&owl_goal_worm[8]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_does_defend/src/engine/owl.c:4278:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v12 + 12003968) = *( _OWORD *)&owl_goal_worm[8]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_does_defend/src/engine/owl.c:4278:44: error: expected expression
*( _OWORD *)( v12 + 12003968) = *( _OWORD *)&owl_goal_worm[8]; 
                                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_does_defend/src/engine/owl.c:4278:36: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v12 + 12003968) = *( _OWORD *)&owl_goal_worm[8]; 
                                   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_does_defend/src/engine/owl.c:4279:12: error: expected expression
*( _OWORD *)( v12 + 12003952) = *( _OWORD *)&owl_goal_worm[4]; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_does_defend/src/engine/owl.c:4279:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v12 + 12003952) = *( _OWORD *)&owl_goal_worm[4]; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_does_defend/src/engine/owl.c:4279:44: error: expected expression
*( _OWORD *)( v12 + 12003952) = *( _OWORD *)&owl_goal_worm[4]; 
                                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_does_defend/src/engine/owl.c:4279:36: error: use of undeclared identifier '_OWORD'
*( _OWORD *)( v12 + 12003952) = *( _OWORD *)&owl_goal_worm[4]; 
                                   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_does_defend/src/engine/owl.c:4280:12: error: expected expression
*( _OWORD *)&dragon_goal_worms[v12 / 0x3C][0] = *( _OWORD *)owl_goal_worm; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_does_defend/src/engine/owl.c:4280:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&dragon_goal_worms[v12 / 0x3C][0] = *( _OWORD *)owl_goal_worm; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_does_defend/src/engine/owl.c:4280:60: error: expected expression
*( _OWORD *)&dragon_goal_worms[v12 / 0x3C][0] = *( _OWORD *)owl_goal_worm; 
                                                           ^
/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_does_defend/src/engine/owl.c:4280:52: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&dragon_goal_worms[v12 / 0x3C][0] = *( _OWORD *)owl_goal_worm; 
                                                   ^
16 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O3/gobmk-clang-O3/owl_does_defend/src/obj/1/owl.o] Error 1
